--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,42 @@
-.header {
-  font-size: 60px;
-  margin: 20px;
-  padding: 20px;
+.card {
+  border-radius: 10px;
 }
 
-.card_container {
-  margin: 10px;
-  padding: 20px 20px;
-  display:flex;
-  flex-direction: column;
-  justify-content: space-between;
+.card-body{
+  text-align: center;
+  background: linear-gradient(179.4deg, rgb(253, 240, 233) 2.2%, rgb(255, 194, 203) 96.2%);
+}
+
+.icon-shape {
+  display: inline-flex;
+  justify-content: center;
   align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: white;
+  margin: 5px;
 }
 
-.ctitle{
-  font-size: 25px;
+p{
+  font-size: 13px;
 }
 
-.cimage{
-  width: 1em;
-  margin-left:20px;
-  margin-right:20px;
-  padding:20px;
+.form-items {
+  margin: 15px;
 }
 
-.badge {
-  width: 18em;
+.item{
+  border-radius: 5px;
+  border-width: 1px;
+  margin: 2px;
+  border-color:gray;
+
 }
 
-.footer {
-  margin: 20px;
-  font-size: 25px;
-  padding-right: 4em;
+.alert-message{
+  border-radius: 5px; 
+  margin-top: 15px;
+  font-size: 1rem; 
+  text-align: center;
 }
