--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
 #root {
-    max-width:auto;
-    margin: auto;
-    padding-left: 7rem;
-    padding-right: 2rem;
-    text-align: center;
-    font-size: 25px;
-  }
-  
-  
+  max-width: 100vh;
+  max-height: 100vh;
+  text-align: center;
+  font-size: 15px;
+  align-items: center;
+  padding-left: 40rem;
+  padding-top: 8rem;
+}
